@@ -44,6 +44,7 @@ test_requires 'File::Object' => 0;
 test_requires 'MARC::Record' => 0;
 test_requires 'MARC::File::XML' => 0;
 test_requires 'Perl6::Slurp' => 0;
+test_requires 'Test::MockObject' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Warn' => 0;
